# junzetan98.github.io

./: README.md  _quarto.yml  about.html  index.qmd  pyproject.toml
.github/workflows/: quarto-publish.yml
_site/: index.html  search.json
